Work around for https://github.com/quarkusio/quarkus/issues/21372